<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/menu_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_webview"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/menu_open_website"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_student_details"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_exit"
        app:showAsAction="never" />

</menu>
